# fileServiceAWS

./: CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
client/: CMakeLists.txt  sync_manager.cpp
test/: CMakeLists.txt  test_sync_manager.cpp
